add option to run simulation multiple times and receive summary statistics